# systems-and-networks-labs

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
common/: block.cpp  block.h  frame.cpp  frame.h  input_frame.cpp  input_frame.h  queue_characteristics.cpp  queue_characteristics.h  receiver_ready.cpp  receiver_ready.h
multi-frame/: block.h  dispatcher.cpp  dispatcher.h  main.cpp  multiple_frame_handler.cpp  multiple_frame_handler.h  receiver_ready.h
reports/: ЛР1.docx  ЛР2.docx  ЛР3.docx  ЛР4.docx  ЛР5.docx
single-frame/: block.h  dispatcher.cpp  dispatcher.h  main.cpp  receiver_ready.h  single_frame_handler.cpp  single_frame_handler.h
